; ModuleID = '/home/carl/AnghaBench/git/extr_dir.c_add_patterns_from_blob_to_list.c'
source_filename = "/home/carl/AnghaBench/git/extr_dir.c_add_patterns_from_blob_to_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }
%struct.pattern_list = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @add_patterns_from_blob_to_list(%struct.object_id* %0, i8* %1, i32 %2, %struct.pattern_list* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.object_id*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.pattern_list*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  store %struct.object_id* %0, %struct.object_id** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store %struct.pattern_list* %3, %struct.pattern_list** %9, align 8
  %13 = load %struct.object_id*, %struct.object_id** %6, align 8
  %14 = call i32 @do_read_blob(%struct.object_id* %13, i32* null, i64* %11, i8** %10)
  store i32 %14, i32* %12, align 4
  %15 = load i32, i32* %12, align 4
  %16 = icmp ne i32 %15, 1
  br i1 %16, label %17, label %19

17:                                               ; preds = %4
  %18 = load i32, i32* %12, align 4
  store i32 %18, i32* %5, align 4
  br label %26

19:                                               ; preds = %4
  %20 = load i8*, i8** %10, align 8
  %21 = load i64, i64* %11, align 8
  %22 = load i8*, i8** %7, align 8
  %23 = load i32, i32* %8, align 4
  %24 = load %struct.pattern_list*, %struct.pattern_list** %9, align 8
  %25 = call i32 @add_patterns_from_buffer(i8* %20, i64 %21, i8* %22, i32 %23, %struct.pattern_list* %24)
  store i32 0, i32* %5, align 4
  br label %26

26:                                               ; preds = %19, %17
  %27 = load i32, i32* %5, align 4
  ret i32 %27
}

declare dso_local i32 @do_read_blob(%struct.object_id*, i32*, i64*, i8**) #1

declare dso_local i32 @add_patterns_from_buffer(i8*, i64, i8*, i32, %struct.pattern_list*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
